feat: AI 챗봇 인증 연동 및 안정성 개선
- 비로그인 사용자의 AI/1:1 채팅 접근 차단
- 클라이언트 발급 sessionId 대신 서버 인증된 userId로 대화 히스토리 관리
- 유휴 대화 히스토리 자동 정리 스케줄러 추가, AI 응답 실패시 fallback 처리
- BookingSchduler 동작을 위한 @EnableScheduling 활성화
- 사용하지 않는 AiChatRequest(구 버전) 제거, 채팅 UI 개선